--- a/src/app/create-usager/create-usager.component.html
+++ b/src/app/create-usager/create-usager.component.html
@@ -3,7 +3,7 @@ table, th, td {
   border: 1px solid black;
 }
 h3 {
-   background: #88ccff;
+   background: #dddd00;
 border-bottom: 5px solid #33aaff;
 }
 
@@ -13,7 +13,7 @@ div {
 }
 </style>
 <div class="col-md-6 offset-md-3">
-  <h3> Ajouter un usager</h3>
+  <h3 class="text-center"> Ajouter un usager</h3>
   <form (ngSubmit) = "onSubmit()">
 
     <div class="form-group">
@@ -52,7 +52,7 @@ div {
 
     </div><br>
 
-    <button class = "btn btn-success" type ="submit">Submit</button>
+    <button class = "btn btn-success" type ="submit">Ajouter</button>
 
   </form>
 </div>
