--- a/src/app/create-citoyen/create-citoyen.component.html
+++ b/src/app/create-citoyen/create-citoyen.component.html
@@ -3,8 +3,8 @@ table, th, td {
   border: 1px solid black;
 }
 h3 {
-   background: #88ccff;
-border-bottom: 5px solid #33aaff;
+   background: #00dd22;
+border-bottom: 5px solid green;
 }
 
 div {
@@ -13,7 +13,7 @@ div {
 }
 </style>
 <div class="col-md-6 offset-md-3">
-  <h3> Ajouter un citoyen plaignant</h3>
+  <h3 class="text-center"> Ajouter un citoyen plaignant</h3>
   <form (ngSubmit) = "onSubmit()">
 
     <div class="form-group">
