--- a/src/app/usager-list/usager-list.component.html
+++ b/src/app/usager-list/usager-list.component.html
@@ -2,8 +2,8 @@
 table, th, td {
   border: 1px solid black;
 }
-h2 { background: green;
-border-bottom: 5px solid green;
+h3 { background: #dddd00;
+border-bottom: 5px solid #33aaff;
 
 }
 
@@ -13,7 +13,7 @@ div {
   border-bottom: double;
 }
 </style>
-<h2 class="text-center"> List d'usagers d'application</h2>
+<h3 class="text-center">List d'usagers de l'application</h3>
 <div class="container">
   <table class = "table table-striped">
 
@@ -28,12 +28,13 @@ div {
       <td> {{ usager.section }} </td>
       <td> {{ usager.usagernom }} </td>
       <td>
-        <button (click) = "updateUsager(usager.id)" class = "btn btn-info"> Update {{ usager.id }} </button></td>
-
+        <button (click) = "updateUsager(usager.id)" class = "btn btn-info"> Mis à jour {{ usager.id }} </button></td>
+      <td>
+        <button (click) = "deleteUsager(usager.id)" class = "btn btn-danger"> Supprimer {{ usager.id }} </button></td>
 
     </tr>
     </tbody>
   </table>
 </div><br><br>
-<div *ngIf="submitted=== true"><h1>{{this.idx}}+{{this.usagera!.usageru}} </h1></div><br><br>
+<div *ngIf="submittedd=== true"><h1>On supprime l'usager qui a l'id:{{this.idx}}+{{this.usagerd?.usageru}}</h1></div><br><br>
 
